# Chatbot

./: .gitignore  README.md  app.py  config.py  debug_trace.py  pyproject.toml  requirements.txt
agents/_base/: context_manager.py
agents/expense/: __init__.py  graph.py  schema.py  state.py
agents/lms/: __init__.py  data_source.py  graph.py  state.py
agents/rag/: graph.py  state.py
agents/scorecard/: __init__.py  graph.py  schema.py  state.py
api/: _runtime.py  app.py  dependencies.py  main.py  schemas.py  streaming.py
api/routes/: chat.py  conversations.py  exports.py  feedback.py  health.py
core/: config.py  rbac.py  telemetry.py  types.py
core/config/: __init__.py  _bootstrap.py  azure.py  llm.py  memory.py  runtime.py  search.py
demo/: index.html  map-background-demo.html
demo/menabot-ui/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json
demo/ui_refactoring/: README.md  angular.json  package-lock.json  package.json
graph/: context_manager.py  rag_graph.py  state.py
graph/agents/: __init__.py  base.py  rag_agent.py
graph/nodes/: __init__.py  embed_node.py  export_node.py  function_gate_node.py  generate_node.py  (+14 more)
helpers/: fiscal.py  keyvaultmanager.py
models/: chat_models.py  data_models.py
orchestrator/: prompts.py  supervisor.py
prompts/: _functions.py  classifier.py  data_synthesize.py  dialog.py  export_prompt.py  function_gate.py  grader.py  lms_agent.py  planner.py  predicate_planner.py  rewrite.py  summarize.py  supervisor_prompt.py  synthesize.py  system.py  title_prompt.py  user.py
screenshare/: __init__.py  audio_pipeline.py  chat_bridge.py  config.py  frame_sampler.py  realtime_client.py  rtc_peer.py  session.py  tts_synthesizer.py  tts_track.py  ws_control.py  ws_signaling.py
scripts/: debug_trace.py
services/: azure_sql_config.py  cancel_signals.py  checkpointer.py  data_db.py  data_schemas.py  drill_suggestions.py  export_service.py  lms_client.py  memory_store.py  openai_client.py  query_telemetry.py  role_lookup.py  search_client.py  sql_client.py  sql_store.py  telemetry.py  text_to_predicate.py
sql/: create_agent_tables.sql
tests/: output.xlsx  report.xlsx
tools/: json_output.py  search_repository.py
(+404 files in other folders)
