# Project metadata + tool configuration only.
# Runtime dependencies remain in requirements.txt — `pip install -r requirements.txt`
# continues to work unchanged. This file does NOT redefine dependencies, so the
# Azure Pipeline command stays identical.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menabot"
version = "1.0.0"
description = "MenaBot — EY MENA RAG service built on LangGraph + Azure (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "EY MENA Engineering" }]
license = { text = "Proprietary" }
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]
# Runtime deps are pinned in requirements.txt (single source of truth for prod).
# Declared dynamic so this file does not shadow them and break the existing
# `pip install -r requirements.txt` pipeline command.
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agents*", "core*", "infrastructure*", "orchestrator*", "services*"]
exclude = ["tests*", "scripts*", "demo*"]

# ── Tool configuration ──

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["demo", "tests/eval"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # Long lines acceptable in prompts

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
